# build_vless_trojan_nodes_rust

./: .gitignore  Cargo.toml  README.md  README1.md  conf.json  config.json  config.yaml  ip.txt  ip1.txt  output.txt  result.csv  result1.csv  worker-vless.js
.fleet/: run.json
src/: 1_conf+ip外部文件，用户输入端口.rs  1_批量生成vless链接.rs  1、使用外部配置文件版本，和外部文件ip.txt传入地址，端口由用户输入.rs  2_ip外部文件，用户输入默认端口.rs  2_批量生成trojan链接.rs  2、不需要外部配置文件版本1，由用户输入地址和端口.rs  3_不需要外部文件，用户输入地址和端口.rs  3、不需要外部配置文件版本2，由文件传入地址和端口.rs  a_不需要配置参数，生成单个链接[Vless或Trojan].rs  b_不需要配置参数，批量生成链接[Vless或Trojan].rs  file_data.rs  main.rs
testcode/: demo.rs
