[package]
name = "build_vless_nodes"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.195"
serde_json = "1.0.111"
regex = "1.10.2"
urlencoding = "2.1.3"
clipboard = "0.5.0"
indexmap = "2.1.0"
ipnetwork = "0.20.0"

#[target.x86_64-pc-windows-msvc]
#rustflags = ["-C", "target-feature=+crt-static"]

[[bin]]
name = "app1"
path = "src/1_conf+ip外部文件，用户输入端口.rs"
target = "x86_64-pc-windows-msvc"

[[bin]]
name = "app2"
path = "src/2_ip外部文件，用户输入默认端口.rs"
target = "x86_64-pc-windows-msvc"

[[bin]]
name = "app3"
path = "src/3_不需要外部文件，用户输入地址和端口.rs"
target = "x86_64-pc-windows-msvc"