[package]
name = "build_cfwks_nodes"
version = "2.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex = "1.11"
urlencoding = "2.1.3"
base64 = "0.22.1"
rand = "0.9.1"
lazy_static = "1.5.0"
csv = "1.3.1"

# [[bin]]
# name = "app"
# path = "testcode/demo.rs"
